[metadata]
name = Class_Toolser
version = 0.0.1
author = Example Author
author_email = ahurarasoli@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/Class_Toolser
project_urls =
    Bug Tracker = https://github.com/AhSiber/Class_Toolser
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
